 2010-11-30 15:11  asfernandes 
   M src/dsql/ExprNodes.cpp
Improvement CORE-3234 -	Support for text BLOBs >= 32K as first argument for TRIM()

 2010-11-30 09:16  alexpeshkoff 
   M src/yvalve/why.cpp
Use huge timeout instead none as suggested by Vlad

 2010-11-30 08:57  alexpeshkoff 
   M builds/posix/make.rules
Make it work with long paths, when ":" is placed on the second line of file

 2010-11-29 15:06  hvlad 
   M src/remote/server/os/win32/srvr_w32.cpp
   M src/remote/server/os/win32/window.cpp
Fixed bug CORE-3266 : Race condition between async service detach request and running user trace service

 2010-11-29 14:54  asfernandes 
   M src/dsql/StmtNodes.cpp
   M src/dsql/Visitors.h
   M src/jrd/cmp.cpp
   M src/jrd/cmp_proto.h
   M src/jrd/exe.cpp
   M src/jrd/exe_proto.h
Move some previously static functions to StmtNodes.cpp

 2010-11-29 02:17  asfernandes 
   M builds/win32/msvc10/engine.vcxproj
   M builds/win32/msvc10/engine.vcxproj.filters
   M builds/win32/msvc7/engine.vcproj
   M builds/win32/msvc7/engine_classic.vcproj
   M builds/win32/msvc7/engine_embed.vcproj
   M builds/win32/msvc8/engine.vcproj
   M builds/win32/msvc9/engine.vcproj
   M src/dsql/DdlNodes.epp
   M src/dsql/Nodes.h
   M src/dsql/StmtNodes.cpp
   M src/dsql/StmtNodes.h
   M src/dsql/Visitors.h
   M src/dsql/parse.y
   M src/dsql/pass1.cpp
   M src/jrd/JrdStatement.cpp
   M src/jrd/JrdStatement.h
   M src/jrd/cmp.cpp
   M src/jrd/cmp_proto.h
   M src/jrd/exe.cpp
   M src/jrd/exe.h
   M src/jrd/exe_proto.h
   D src/jrd/execute_statement.cpp
   D src/jrd/execute_statement.h
   M src/jrd/extds/ExtDS.cpp
   M src/jrd/extds/ExtDS.h
   M src/jrd/extds/IscDS.cpp
   M src/jrd/extds/IscDS.h
   M src/jrd/inf.cpp
   M src/jrd/nod.h
   M src/jrd/par.cpp
   M src/jrd/par_proto.h
   M src/misc/blrtable.cpp
Refactored the support for blr_handler, blr_loop, blr_exec_sql, blr_exec_into, blr_exec_stmt,
blr_start_savepoint, blr_end_savepoint, blr_store, blr_store2, blr_erase, blr_modify,