@@ -1,3 +1,11 @@
+ 2010-12-02 19:54  dimitr 
+   M src/yvalve/gds.cpp
+InitPrefix::init() should never throw, it leads to the infinite recursion with a stack overflow.
+
+ 2010-12-01 16:20  alexpeshkoff 
+   M builds/posix/Makefile.in
+Fixed build without --with-system-editline switch
+
  2010-11-30 15:11  asfernandes 
    M src/dsql/ExprNodes.cpp
 Improvement CORE-3234 -	Support for text BLOBs >= 32K as first argument for TRIM()
